@@ -806,16 +806,19 @@ sub bzero {
     $self -> {_es}  = '+';
     $self -> {_e}   = $LIB -> _zero();
 
-    if (@_ > 0) {
-        if (@_ > 3) {
-            # call like: $x->bzero($a, $p, $r, $y);
-            ($self, $self->{_a}, $self->{_p}) = $self->_find_round_parameters(@_);
-        } else {
-            # call like: $x->bzero($a, $p, $r);
-            $self->{_a} = $_[0]
-              if !defined $self->{_a} || (defined $_[0] && $_[0] > $self->{_a});
-            $self->{_p} = $_[1]
-              if !defined $self->{_p} || (defined $_[1] && $_[1] > $self->{_p});
+    # If rounding parameters are given as arguments, use them. If no rounding
+    # parameters are given, and if called as a class method initialize the new
+    # instance with the class variables.
+
+    if (@_) {
+        croak "can't specify both accuracy and precision"
+          if @_ >= 2 && defined $_[0] && defined $_[1];
+        $self->{_a} = $_[0];
+        $self->{_p} = $_[1];
+    } else {
+        unless($selfref) {
+            $self->{_a} = $class -> accuracy();
+            $self->{_p} = $class -> precision();
         }
     }
 
@@ -848,16 +851,19 @@ sub bone {
     $self -> {_es}  = '+';
     $self -> {_e}   = $LIB -> _zero();
 
-    if (@_ > 0) {
-        if (@_ > 3) {
-            # call like: $x->bone($sign, $a, $p, $r, $y, ...);
-            ($self, $self->{_a}, $self->{_p}) = $self->_find_round_parameters(@_);
-        } else {
-            # call like: $x->bone($sign, $a, $p, $r);
-            $self->{_a} = $_[0]
-              if ((!defined $self->{_a}) || (defined $_[0] && $_[0] > $self->{_a}));
-            $self->{_p} = $_[1]
-              if ((!defined $self->{_p}) || (defined $_[1] && $_[1] > $self->{_p}));
+    # If rounding parameters are given as arguments, use them. If no rounding
+    # parameters are given, and if called as a class method initialize the new
+    # instance with the class variables.
+
+    if (@_) {
+        croak "can't specify both accuracy and precision"
+          if @_ >= 2 && defined $_[0] && defined $_[1];
+        $self->{_a} = $_[0];
+        $self->{_p} = $_[1];
+    } else {
+        unless($selfref) {
+            $self->{_a} = $class -> accuracy();
+            $self->{_p} = $class -> precision();
         }
     }
 
@@ -899,6 +905,22 @@ sub binf {
     $self -> {_es}  = '+';
     $self -> {_e}   = $LIB -> _zero();
 
+    # If rounding parameters are given as arguments, use them. If no rounding
+    # parameters are given, and if called as a class method initialize the new
+    # instance with the class variables.
+
+    if (@_) {
+        croak "can't specify both accuracy and precision"
+          if @_ >= 2 && defined $_[0] && defined $_[1];
+        $self->{_a} = $_[0];
+        $self->{_p} = $_[1];
+    } else {
+        unless($selfref) {
+            $self->{_a} = $class -> accuracy();
+            $self->{_p} = $class -> precision();
+        }
+    }
+
     return $self;
 }
 
@@ -931,6 +953,22 @@ sub bnan {
     $self -> {_m}   = $LIB -> _zero();
     $self -> {_es}  = '+';
     $self -> {_e}   = $LIB -> _zero();
+
+    # If rounding parameters are given as arguments, use them. If no rounding
+    # parameters are given, and if called as a class method initialize the new
+    # instance with the class variables.
+
+    if (@_) {
+        croak "can't specify both accuracy and precision"
+          if @_ >= 2 && defined $_[0] && defined $_[1];
+        $self->{_a} = $_[0];
+        $self->{_p} = $_[1];
+    } else {
+        unless($selfref) {
+            $self->{_a} = $class -> accuracy();
+            $self->{_p} = $class -> precision();
+        }
+    }
 
     return $self;
 }
